@@ -574,16 +574,14 @@ ROMDUMP,<br>
 receive the dumping program and next launch it by CUSTOM, F1, scroll
 down to ROMDUMP, ENTER,<br>
 <font size="3">- TI86 : type ASM(ROMDump) to launch program.<br>
-<br>
-- TI84+ USB : </font><font size="3">PRGM, EXEC, ROMDUMP<br>
-- Titanium USB : romdump(), ENTER<br>
+- TI84+: </font><font size="3">PRGM, EXEC, ROMDUMP<br>
+- TI84+ / USB : no dumper yet<br>
+- Titanium / USB : romdump(), ENTER<br>
 <br>
 <span style="font-style: italic;">Note:</span> Silver/DirectLink cables
 do not like timeouts. To avoid
 this, TiLP2 will display a dialog box so that you will have the time
-to enter the needed commands.<br>
-<span style="font-style: italic;">Note:</span> TI84+/USB does not have
-ROM dumper (yet).<br>
+to enter the needed commands.<span style="font-style: italic;"></span><br>
 </font>
 <blockquote> </blockquote>
 <h2>5.7 ID-LIST</h2>
