@@ -2,11 +2,12 @@ SubVersion: $Id$
 
 Log of changes:	tilp (cables, calcs, files, ticonv)
 
-- 17/01/2007, version 1.02 (1.0.3, 1.0.2, 1.0.2, 1.0.1): roms
+- 17/01/2007, version 1.02 (1.0.3, 1.0.3, 1.0.2, 1.0.1): roms
 	- added xdg-open in front of the list of browsers (kevin)
 	- add trailing slash for directory (otherwise, dirname with spaces 
 	like 'My Files' are not opened properly)
 	- fixed sending of vars into archive thru the App node
+	- Titanium/USB dumper is now launched remotely
 	
 - 28/09/2006, version 1.01 (1.0.3, 1.0.2, 1.0.2, 1.0.1): roms
 	- as stated by Benjamin, replaced snprintf by g_snprintf which is safer
